--- a/app/src/main/res/layout/view_holder_story.xml
+++ b/app/src/main/res/layout/view_holder_story.xml
@@ -1,7 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:elevation="5dp"
+        app:cardCornerRadius="3dp"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@drawable/custom_ripple">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <androidx.appcompat.widget.AppCompatTextView
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/darkVibrant"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/scoreContainer"
+                android:id="@+id/titleTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        <androidx.appcompat.widget.AppCompatTextView
+                android:layout_marginTop="10dp"
+                android:textColor="@color/darkVibrant"
+                app:layout_constraintTop_toBottomOf="@id/titleTextView"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/scoreContainer"
+                android:id="@+id/postedByTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        <FrameLayout
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/titleTextView"
+                app:layout_constraintDimensionRatio="H,1:1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/circular_background"
+                android:id="@+id/scoreContainer"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="5dp"
+                app:layout_constraintWidth_percent="0.15">
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:autoSizeMinTextSize="8sp"
+                    android:textStyle="bold"
+                    android:textSize="22sp"
+                    android:textColor="@color/white"
+                    android:id="@+id/scoreTextView"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+        </FrameLayout>
 
-</CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    
+
+
+</androidx.cardview.widget.CardView>
