--- a/app/src/main/res/layout/view_holder_story.xml
+++ b/app/src/main/res/layout/view_holder_story.xml
@@ -23,15 +23,27 @@
                 android:id="@+id/titleTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+                android:layout_marginTop="10dp"
+                android:textColor="@color/vibrant"
+                app:layout_constraintTop_toBottomOf="@id/titleTextView"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/scoreContainer"
+                android:id="@+id/sourceTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
         <androidx.appcompat.widget.AppCompatTextView
                 android:layout_marginTop="10dp"
                 android:textColor="@color/darkVibrant"
-                app:layout_constraintTop_toBottomOf="@id/titleTextView"
+                app:layout_constraintTop_toBottomOf="@id/sourceTextView"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/scoreContainer"
                 android:id="@+id/postedByTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
+
         <FrameLayout
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
