--- a/app/src/main/res/layout/view_holder_item.xml
+++ b/app/src/main/res/layout/view_holder_item.xml
@@ -19,6 +19,7 @@
         <androidx.appcompat.widget.AppCompatTextView
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:layout_marginRight="5dp"
                 android:textColor="@color/darkVibrant"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -28,11 +29,14 @@
                 android:layout_height="wrap_content" />
 
         <androidx.appcompat.widget.AppCompatTextView
-                android:layout_marginTop="10dp"
                 android:textColor="@color/vibrant"
+                app:layout_constraintBottom_toTopOf="@id/postedByTextView"
                 app:layout_constraintTop_toBottomOf="@id/titleTextView"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/scoreContainer"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="10dp"
                 android:id="@+id/sourceTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
@@ -40,9 +44,9 @@
         <androidx.appcompat.widget.AppCompatTextView
                 android:layout_marginTop="10dp"
                 android:textColor="@color/darkVibrant"
-                app:layout_constraintTop_toBottomOf="@id/sourceTextView"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/scoreContainer"
+                app:layout_constraintRight_toLeftOf="@id/viewCommentsButton"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/postedByTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
@@ -50,15 +54,14 @@
         <FrameLayout
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/titleTextView"
+                app:layout_constraintBottom_toTopOf="@id/viewCommentsButton"
                 app:layout_constraintDimensionRatio="H,1:1"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circular_background"
                 android:id="@+id/scoreContainer"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintWidth_percent="0.15">
             <androidx.appcompat.widget.AppCompatTextView
                     android:autoSizeMinTextSize="8sp"
@@ -70,6 +73,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
         </FrameLayout>
+
+        <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/viewCommentsButton"
+                android:layout_marginTop="10dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="View Comments"
+                android:tint="@color/darkVibrant"
+                android:src="@drawable/ic_comment_black_36dp"
+                android:background="?attr/selectableItemBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     
